<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="TcoAoStatus" Id="{09e4fd1a-6dcc-014b-0a0e-96cc139ef658}">
    <Declaration><![CDATA[TYPE TcoAoStatus :
STRUCT
	{attribute addProperty Name "<#Raw range#>"}
	RawRange: REAL;
	{attribute addProperty Name "<#Real range#>"}
	RealRange: REAL;	
	{attribute addProperty Name "<#Unscaled value#>"}
	Unscaled: REAL;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>